@@ -739,6 +739,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21518) Special:UserRights no longer displays the user name box for users
   that can only change their rights
 * (bug 21593) Special:UserRights now lists automatic groups membership
+* (bug 22364) Setting $wgUseExternalEditor to false no longer hides the reupload
+  link from file pages
 
 == API changes in 1.16 ==
 
